fix: callout__title uses gap not margin

--- a/blocks/callout/callout.css
+++ b/blocks/callout/callout.css
@@ -49,7 +49,7 @@
 
   @container callout-container (min-width: 35.5rem) {
     padding: 2.5rem;
-    gap: 2rem;
+    gap: 1.25rem;
 
     .button {
       width: unset;
@@ -58,6 +58,7 @@
 
   @container callout-container (min-width: 44rem) {
     padding: 1.5rem;
+    gap: 1.5rem;
   }
 
   @container callout-container (min-width: 49rem) {
@@ -65,6 +66,7 @@
     align-items: center;
     padding: 3.625rem;
     justify-content: space-between;
+    gap: 2rem;
   }
 }
 
@@ -105,7 +107,7 @@
     font-weight: var(--spectrum-extra-bold-font-weight);
     font-size: var(--spectrum-font-size-700);
     line-height: 1.25;
-    margin-block-end: 0.5rem;
+    margin-block-end: 0;
 
     @container callout-container (min-width: 35.5rem) {
       font-size: var(--spectrum-font-size-900);
@@ -113,12 +115,10 @@
 
     @container callout-container (min-width: 44rem) {
       font-size: var(--spectrum-font-size-1000);
-      margin-block-end: 0.75rem;
     }
 
     @container callout-container (min-width: 49rem) {
       font-size: var(--spectrum-font-size-1100);
-      margin-block-end: 1.5rem;
     }
   }
 }
